--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-hook-form": "^6.15.4",
     "react-icons": "^3.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
