--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "firebase-auth-video",
-  "version": "0.1.0",
+  "name": "ilist-personal-list-app",
+  "version": "3.0.0",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.0.0",
     "firebase": "^8.2.9",
     "framer-motion": ">=3.0.0",
+    "gulp-purgecss": "^4.1.3",
     "react": "^17.0.1",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.1",
@@ -22,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "purgecss --css build/static/css/*.css --content build/index.html build/static/js/*.js --output build/static/css"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.49.7"
   }
 }
